<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    .<LinearLayout
    android:id="@+id/logoSpace"
    android:layout_width="match_parent"
    android:layout_height="219dp"
    android:gravity="center"
    android:orientation="horizontal"
    tools:layout_editor_absoluteX = "0dp"
    tools:layout_editor_absoluteY = "0dp"
    tools:ignore="MissingConstraints">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal"
        app:srcCompat="@drawable/camera_icon"
        tools:ignore="MissingConstraints"
        />
</LinearLayout>

    <LinearLayout
        android:id="@+id/sloganSpace"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints" />
    <LinearLayout
        android:id="@+id/emailAddressSpace"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="vertical"
        android:gravity="center"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/emailAddressInput"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:inputType="textEmailAddress"
            android:orientation="horizontal"
            android:hint="@string/email"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/passwordSpace"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="vertical"
        android:gravity="center"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:hint="@string/password"
            android:orientation="horizontal"
            android:inputType="textPassword"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
        <Button
            android:id="@+id/loginButtonConfirm"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:text="Log-in"
            android:fontFamily="sans-serif-black"
            android:backgroundTint="@color/purple"
            />
        <TextView
            android:id="@+id/forgotPassword"
            android:gravity="center"
            android:layout_width="300dp"
            android:layout_height="20dp"
            android:layout_marginTop="7dp"
            android:text="@string/forgot_password"

            android:textColor="@color/lilas"
            />
        <TextView
            android:id="@+id/or"
            android:gravity="center"
            android:layout_width="300dp"
            android:layout_height="20dp"
            android:layout_marginTop="7dp"
            android:text="ou"

            android:textColor="@color/lilas"
            />
        <TextView
            android:id="@+id/createAccount"
            android:gravity="center"
            android:layout_width="300dp"
            android:layout_height="20dp"
            android:text="@string/create_account"
            android:textSize="15dp"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:textColor="@color/lilas"
            android:autoLink="phone"
            android:textColorLink="@color/black"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/copyright"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="75dp"
        android:gravity="center"
        android:text="@string/copyright"
        android:textColor="@color/black"
        android:textSize="15dp" />

</LinearLayout>