<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    .<LinearLayout
    android:id="@+id/logoSpace"
    android:layout_width="match_parent"
    android:layout_height="219dp"
    android:gravity="center"
    android:orientation="horizontal"
    tools:layout_editor_absoluteX = "0dp"
    tools:layout_editor_absoluteY = "0dp"
    tools:ignore="MissingConstraints">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal"
        app:srcCompat="@drawable/camera_icon"
        tools:ignore="MissingConstraints"
        />
</LinearLayout>

    <LinearLayout
        android:id="@+id/sloganSpace"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints" />
    <LinearLayout
        android:id="@+id/emailAddressSpace"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="vertical"
        android:gravity="center"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/emailAddressInput"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:inputType="textEmailAddress"
            android:orientation="horizontal"
            android:hint="@string/email"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/passwordSpace"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="vertical"
        android:gravity="center"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:hint="@string/password"
            android:inputType="textPassword"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/confirmPasswordSpace"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="vertical"
        android:gravity="center"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/confirmPasswordInput"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="40px"
            android:text="Li e concordo com os Termos de Uso"
            android:autoLink="phone"/>
    </LinearLayout>
    <TextView
        android:id="@+id/useTerms"
        android:layout_width="match_parent"
        android:layout_height="18dp"
        android:gravity="center"
        android:text="Termos de Uso"
        android:textColor="@color/purple"
        android:textSize="15dp" />
    <LinearLayout
        android:id="@+id/buttonSpace"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="vertical"
        android:gravity="center"
        tools:ignore="MissingConstraints">
        <Button
            android:id="@+id/registerButton"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:text="Cadastrar"
            android:textSize="20dp"
            android:fontFamily="sans-serif-black"
            android:backgroundTint="@color/purple"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/copyright"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center"
        android:text="@string/copyright"
        android:textColor="@color/black"
        android:textSize="15dp" />

</LinearLayout>